@@ -2,4 +2,5 @@ from proj import *
 from CF_proj import *
 from CF_createfile import *
 from CF_loadfile import *
+from CF_colourmap import *
 from CF_area import *
